jwt token params were added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.data.mongodb.database=car-repair-db
 spring.data.mongodb.auto-index-creation=true
+
+jwt.token.expired.ms=600000
+jwt.token.secret=secretKey
