Redis was fixed and JwtUserDetailsService created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
+#MongoDB params
 spring.data.mongodb.database=car-repair-db
 spring.data.mongodb.auto-index-creation=true
 
+#Jwt params
 jwt.token.expired.ms=600000
 jwt.token.secret=secretKey
+
+#Redis params
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
