--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.8'
 
 services:
 
@@ -11,3 +11,13 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: rootuser
       MONGO_INITDB_ROOT_PASSWORD: password
+
+  cache:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+
+networks:
+  default:
+    name: repair
